# gap_sdk

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  KNOWN_ISSUES  Makefile  README.md  package.json  requirements.txt  requirements_apt.md  sourceme.sh  testplan.cfg  testset.cfg
gvsoc/: CMakeLists.txt  build-gvsoc  gvsoc-build  setup_gvsoc.sh
gvsoc/cmake/: vp_model.cmake
gvsoc/dpi-models/: CMakeLists.txt  Makefile  dpi_rules.mk
gvsoc/dpi-models/models/: CMakeLists.txt  Makefile
gvsoc/dpi-models/src/: dpi.cpp  i2c.cpp  i2s.cpp  jtag.cpp  models.cpp  telnet_proxy.cpp
gvsoc/ext/: CMakeLists.txt
gvsoc/ext/xtensor/: CMakeLists.txt
gvsoc/gvsoc/: .gitignore  CMakeLists.txt  Makefile  vp_models.mk
gvsoc/gvsoc/docs/: commands.rst  conf.py  configuration.rst  debug_symbols.rst  devices.rst  index.rst  options.rst  power_models.rst  profiling.rst  remote_control.rst  requirements.txt  system_traces.rst  timing_models.rst  usage.rst  vcd_traces.rst
gvsoc/gvsoc/dpi-wrapper/: CMakeLists.txt  Makefile
gvsoc/gvsoc/engine/: CMakeLists.txt  Makefile
gvsoc/gvsoc/generators/: gsystree.py
gvsoc/gvsoc/launcher/: CMakeLists.txt  Makefile
gvsoc/gvsoc/models/: CMakeLists.txt  Makefile
gvsoc/gvsoc_gap/: CMakeLists.txt  Makefile
gvsoc/gvsoc_gap/models/: CMakeLists.txt  Makefile
gvsoc/runner/: Makefile
gvsoc/runner/aes/: AesLib.c  AesLib.h  main.c
gvsoc/runner/python/: plp_board_runner.py  plp_platform.py  plp_runner.py
gvsoc/tmp/gdbserver/: rsp-packet-codec.hpp  target.hpp
gvsoc/tmp/gdbserver_src/: rsp.cpp
libs/frame_streamer/: CMakeLists.txt  Makefile
libs/frame_streamer/frame_streamer/: frame_streamer.c
libs/frame_streamer/python/: pmsis_tools.cpp  pmsis_tools.hpp  pmsis_tools_frame_streamer.cpp
libs/frame_streamer/rules/: gap_sdk.mk  pulp_sdk.mk
libs/gap_lib/: CMakeLists.txt  Kconfig  Makefile  README.rst
libs/gap_lib/g722_encoder_decoder/: LICENSE  README.md
libs/gap_lib/img_io/: ImgIO.c
libs/gap_lib/jpeg/: cluster.c  cluster.h  dct.c  dct.h  jpeg_constants.c  jpeg_constants.h  jpeg_encoder.c  jpeg_encoder.h
libs/gap_lib/rules/: gap_sdk.mk  pulp_sdk.mk  pulpos.mk
libs/gap_lib/testbench/: CMakeLists.txt  testbench.c  testbench.h  testlib.c  testlib.h  testlib_hyper.c  testlib_i2c.c  testlib_i2c.h  testlib_i2s.c  testlib_i2s.h  testlib_uart.c  testlib_uart.h
libs/gap_lib/wav_io/: wavIO.c
rtos/freeRTOS/: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.md  directories.txt
rtos/freeRTOS/demos/: directories.txt
rtos/freeRTOS/freertos_kernel/: CMakeLists.txt  tasks.c
rtos/pmsis/bsp/: CMakeLists.txt  Kconfig  Makefile  src.mk
rtos/pmsis/implem/: CMakeLists.txt
rtos/pmsis/pmsis_bsp/: .gitignore  CMakeLists.txt  Makefile  src.mk
rtos/pmsis/pmsis_implem/: CMakeLists.txt
tools/autotiler_v3/: CMakeLists.txt  Makefile  download_tiler.sh  get_tiler.py  version.cfg
tools/autotiler_v3/Autotiler/: AutoTilerLib.h  AutoTilerLibTypes.h  BitVector.h  ComputeTiling.h  Expr_Parse.h  Expr_Parse.tab.h  GenTilingDump.h  GraphProcess.h  ModelCreate.h  TilingGenCode.h  TilingGenCodeHelper.h
tools/autotiler_v3/CNN_Generators/: CNN_Copy_Generators.c  CNN_Copy_Generators.h  CNN_Generator_Util.c  CNN_Generator_Util.h  CNN_Generators.c  CNN_Generators.h  SSD_Generators.c  SSD_Generators.h
tools/autotiler_v3/CNN_Generators_NE16/: CMakeLists.txt  CNN_Generators_NE16.c  CNN_Generators_NE16.h  CNN_Generators_NE16_Eric.c  CNN_Generators_NE16_Eric_new.c  RNN_Generators_NE16.c  RNN_Generators_NE16.h
tools/autotiler_v3/CNN_Generators_SQ8/: CNN_Generators_SQ8.c  CNN_Generators_SQ8.h  RNN_Generators_SQ8.c  RNN_Generators_SQ8.h
tools/autotiler_v3/CNN_Generators_fp16/: CNN_Generators_fp16.c  CNN_Generators_fp16.h  RNN_Generators_fp16.c  RNN_Generators_fp16.h  SSD_Generators_fp16.c  SSD_Generators_fp16.h
tools/autotiler_v3/CNN_Libraries/: CMakeLists.txt  CNN_BasicKernels.h  CNN_BiasReLULinear_BasicKernels.c  CNN_Conv_BasicKernels.c  CNN_Conv_DP_BasicKernels.c  CNN_Conv_DW_BasicKernels.c  CNN_Conv_DW_DP_BasicKernels.c  CNN_Copy.c  CNN_Copy.h  CNN_CopyBasicKernels.c  CNN_CopyBasicKernels.h  CNN_Defines.h  CNN_MatAlgebra.c  CNN_Pooling_BasicKernels.c  CNN_SoftMax.c  SSD_BasicKernels.c  SSD_BasicKernels.h  TestSoftMax.c
tools/autotiler_v3/CNN_Libraries_NE16/: CNN_BasicKernels_NE16.c  CNN_BasicKernels_NE16.h  NE16_Helpers.h  NE16_Job_Trigger.h  NE16_Manual_Subtile.h  RNN_BasicKernels_NE16.c  RNN_BasicKernels_NE16.h  hal_ne16.h  stage_desc.h
tools/autotiler_v3/CNN_Libraries_SQ8/: CMakeLists.txt  CNN_AT_Misc.c  CNN_AT_Misc.h  CNN_Activation_HWC_SQ8.c  CNN_Activation_SQ8.c  CNN_BasicKernels_SQ8.h  CNN_Bias_Linear_SQ8.c  CNN_Conv_DW_Red_SQ8.c  CNN_Conv_DW_SQ8.c  CNN_Conv_SQ8.c  CNN_Infos_SQ8.h  CNN_MatAlgebra_HWC_SQ8.c  CNN_MatAlgebra_SQ8.c  CNN_MatMul_Conv_SQ8.c  CNN_Pooling_SQ8.c  CNN_SoftMax_SQ8.c  RNN_SQ8.c
tools/autotiler_v3/CNN_Libraries_fp16/: CMakeLists.txt  CNN_BasicKernels_fp16.h  CNN_Bias_Linear_Activation_fp16.c  CNN_Conv_BasicKernels_fp16.c  CNN_Conv_DW_BasicKernels_fp16.c  CNN_Defines_fp16.h  CNN_FloatType.h  CNN_MatAlgebra_fp16.c  CNN_MatMul_Conv_fp16.c  CNN_Pooling_BasicKernels_fp16.c  CNN_SoftMax_fp16.c  RNN_fp16.c  SSD_BasicKernels_fp16.c  SSD_BasicKernels_fp16.h
tools/autotiler_v3/DSP_Generators/: DSP_Generators.c  DSP_Generators.h  DSP_LUTGen.py  SetupLUT.py
tools/autotiler_v3/DSP_Libraries/: CMakeLists.txt  CmplxFunctions.c  CmplxFunctions.h  DSP_FloatType.h  DSP_Lib.h  FFT_Library.c  FFT_Library.h  FastFloatApprox.h  FastFloatApprox16.h  FloatDefines.h  FloatLutFuncs.h  MatAddDSP.c  MatMulDSP.c  MfccBasicKernels.c  MfccBasicKernels.h  PreProcessing.c  PreProcessing.h  float_math_funcs.c  float_math_funcs.h  math_funcs.c  math_funcs.h
tools/autotiler_v3/Emulation/: Gap.h  GapBuiltins.h  GapSystem.h  at_api.h  at_api_emul.h  at_api_pmsis.h
tools/autotiler_v3/Generators/: CMakeLists.txt  README.md
tools/gap-configs/: CMakeLists.txt
tools/littlefs/: CMakeLists.txt  lslfs.c
tools/pulp_tools/: .appveyor.yml  .travis.yml  CMakeLists.txt  Makefile  README.md
utils/json-tools/: CMakeLists.txt
(+22350 files in other folders)
